2012-05-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/gptsync.c (grub_cmd_gptsync): Propagate the
	relaxation of protective MBR requirements.

2012-05-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Add condition for COND_HOST_XNU.
	* Makefile.util.def (10_xnu): New script.
	* util/grub.d/10_xnu.in: New file, extracted from 30_os_prober.in.

2012-05-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/i386/pc/startup.S [__APPLE__]: Add a workaround for
	objconv bug.

2012-05-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gdb/i386/machdep.S: Make usable with Apple assembler.
	Binary on other platforms stays identical.

2012-05-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Remove APPLE_CC and add -Wl,-allow_stack_execute on
	Apple.

2012-05-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* gentpl.py: Ignore error 2022 in objconv since it's irrelevant for us.

2012-05-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/posix_wrap/sys/types.h [__APPLE__]: Include stddef
	rather than defining size_t ourselves to avoid conflict.

2012-05-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/hfs.c (grub_hfs_dir): Use memset instead of
	initialisation to avoid __bzero reference.

2012-05-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/boot/i386/pc/startup_raw.S [__APPLE__]: Add Apple assembly
	version.
	* grub-core/commands/i386/pc/drivemap_int13h.S [__APPLE__]: Likewise.
	* grub-core/kern/i386/pc/startup.S [__APPLE__]: Likewise.
	* grub-core/lib/i386/relocator16.S [__APPLE__]: Likewise.
	* grub-core/lib/i386/relocator_common.S [__APPLE__]: Likewise.
	* grub-core/mmap/i386/pc/mmap_helper.S [__APPLE__]: Likewise.

2012-05-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/efiemu/runtime/efiemu.c: Replace APPLE_CC with __APPLE__.
	* grub-core/kern/misc.c: Likewise.
	* grub-core/loader/i386/xnu.c: Likewise.
	* include/grub/i386/tsc.h: Likewise.